added some logic to demo journeys

--- a/app/views/lis/0/lis-home.html
+++ b/app/views/lis/0/lis-home.html
@@ -33,7 +33,7 @@
           -->
           <tr>
             <td>About you</td>
-            <td><a href="you/work">Start</a></td>
+            <td><a href="you/education">Start</a></td>
           </tr>
           <tr>
             <td>About your partner</td>
