--- a/app/views/lis/0/you/about-you-summary.html
+++ b/app/views/lis/0/you/about-you-summary.html
@@ -38,7 +38,7 @@
       -->
       <tr>
         <td>Do you have a job</td>
-        <td>Yes</td>
+        <td>{{myWork}}</td>
         <td><a href="#">Change this</a></td>
       </tr>
       <tr>
