--- a/app/views/lis/0/you/benefits/private-pension-amount.html
+++ b/app/views/lis/0/you/benefits/private-pension-amount.html
@@ -13,10 +13,10 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    About your x allowance
+    About your private pension
   </h1>
   
-  <h2 class="heading-medium">When do you receive your x allowance?</h2>
+  <h2 class="heading-medium">How often do you receive your private pension payments?</h2>
   
   <form action="" method="get" class="form">
 
@@ -57,7 +57,7 @@
     
     {{
       form_macros.button({
-        href: 'about-you-summary',
+        href: 'benefit-group1',
         label: 'Save and continue'
       })
     }}
