--- a/app/views/lis/0/you/value-two.html
+++ b/app/views/lis/0/you/value-two.html
@@ -29,7 +29,7 @@
 
     {{
       form_macros.button({
-        href: 'education',
+        href: 'benefits/pension',
         label: 'Save and continue'
       })
     }}
