--- a/app/views/lis/0/registration/partner.html
+++ b/app/views/lis/0/registration/partner.html
@@ -18,19 +18,19 @@
   
   <p>(Description of partner)</p>
 
-  <form action="" method="get" class="form">
+  <form action="partner-handler" method="get" class="form">
       <div class="form-item-wrapper">
         <fieldset>
           <legend class="form-label-bold">Do you have a partner?</legend>
           <div class="inline-form-groups">
             <div class="form-group">
-              <input type="radio" id="binary-yes" name="binary">
+              <input type="radio" id="binary-yes" name="partner" value="yes">
               <label class="form-control-radio" for="binary-yes">
                 Yes
               </label>
             </div>
             <div class="form-group">
-              <input type="radio" id="binary-no" name="binary">
+              <input type="radio" id="binary-no" name="partner" value="no">
               <label class="form-control-radio" for="binary-no">
                 No
               </label>
@@ -41,7 +41,6 @@
     
         {{
       form_macros.button({
-        href: 'partners-details',
         label: 'Next'
       })
     }}
