--- a/app/views/lis/0/you/benefits/other-money.html
+++ b/app/views/lis/0/you/benefits/other-money.html
@@ -13,21 +13,21 @@
     <div class="column-two-thirds">
 
       <h1 class="heading-large">
-        Do you have a job?
+        Do you receive any other money?
       </h1>
   
-      <form action="work-handler" method="get" class="form">
+      <form action="" method="get" class="form">
           <div class="form-item-wrapper">
             <fieldset>
               <div class="inline-form-groups">
                 <div class="form-group">
-                  <input type="radio" id="binary-yes" name="work" value="yes">
+                  <input type="radio" id="binary-yes" name="binary">
                   <label class="form-control-radio" for="binary-yes">
                     Yes
                   </label>
                 </div>
                 <div class="form-group">
-                  <input type="radio" id="binary-no" name="work" value="no">
+                  <input type="radio" id="binary-no" name="binary">
                   <label class="form-control-radio" for="binary-no">
                     No
                   </label>
@@ -38,6 +38,7 @@
 
         {{
           form_macros.button({
+            href: '../about-you-summary',
             label: 'Save and continue'
           })
         }}
