--- a/app/views/lis/0/you/support.html
+++ b/app/views/lis/0/you/support.html
@@ -59,7 +59,7 @@
     
     {{
       form_macros.button({
-        href: 'benefits',
+        href: 'work',
         label: 'Save and continue'
       })
     }}
