added benefit question

--- a/app/views/lis/0/you/benefits/private-pension-amount.html
+++ b/app/views/lis/0/you/benefits/private-pension-amount.html
@@ -57,7 +57,7 @@
     
     {{
       form_macros.button({
-        href: 'benefit-group1',
+        href: 'benefits',
         label: 'Save and continue'
       })
     }}
