setup for version 0.1

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,10 +13,18 @@
       <h1 class="heading-xlarge">Low Income Scheme prototype</h1>
 
       <h2 class="heading-large">Version 0.1</h2>
+      <p>-</p>
+      <ul>
+        <li><a href="/lis/1/index">Start page</a></li>
+        <li><a href="/lis/1/lis-home">My lis home page</a></li>
+      </ul>
+      <h2 class="heading-large">Version 0</h2>
+      <p>This version was created at the end of discovery to encourage discussion in the team.</p>
       <ul>
         <li><a href="/lis/0/index">Start page</a></li>
         <li><a href="/lis/0/lis-home">My lis home page</a></li>
       </ul>
+
     </div>
     
   </div>
