updating living situation section

--- a/app/views/lis/1/lis-home.html
+++ b/app/views/lis/1/lis-home.html
@@ -45,7 +45,7 @@
           </tr>
           <tr>
             <td>About where you live</td>
-            <td><a href="live/hospital">Start</a></td>
+            <td><a href="live/care-home">Start</a></td>
           </tr>
         </table>
     
