--- a/public/stylesheets/nhs_application.css
+++ b/public/stylesheets/nhs_application.css
@@ -1544,11 +1544,11 @@ body {
   color: #6f777b; }
 
 h1, h2, h3, h4, h5, h6 {
-  -webkit-font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
-  -moz-font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
-  -ms-font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
-  -o-font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
-  font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
+  -webkit-font-feature-settings: 'dlig' 0, 'liga' 1, 'lnum' 1, 'kern' 1;
+  -moz-font-feature-settings: 'dlig' 0, 'liga' 1, 'lnum' 1, 'kern' 1;
+  -ms-font-feature-settings: 'dlig' 0, 'liga' 1, 'lnum' 1, 'kern' 1;
+  -o-font-feature-settings: 'dlig' 0, 'liga' 1, 'lnum' 1, 'kern' 1;
+  font-feature-settings: 'dlig' 0, 'liga' 1, 'lnum' 1, 'kern' 1;
   font-family: Frutiger, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 800; }
@@ -1899,3 +1899,6 @@ label, .form-label, .form-label-bold {
 
 #address-line-one, #address-line-two {
   width: 100%; }
+
+li {
+  list-style: none inside circle; }
