--- a/public/stylesheets/nhs_application.css
+++ b/public/stylesheets/nhs_application.css
@@ -1901,4 +1901,4 @@ label, .form-label, .form-label-bold {
   width: 100%; }
 
 li {
-  list-style: none inside circle; }
+  list-style: none inside disc; }
