--- a/app/views/index.html
+++ b/app/views/index.html
@@ -12,13 +12,14 @@
 
       <h1 class="heading-xlarge">Low Income Scheme prototype</h1>
 
-      <h2 class="heading-large">Version 0.1</h2>
-      <p>-</p>
+      <h2 class="heading-large">Alpha sprint 1</h2>
+      <p>Created May 2016</p>
       <ul>
         <li><a href="/lis/1/index">Start page</a></li>
+        <li><a href="/lis/1/lis-home">My lis home page</a></li>
       </ul>
-      <h2 class="heading-large">Version 0</h2>
-      <p>This version was created at the end of discovery to encourage discussion in the team.</p>
+      <h2 class="heading-large">Alpha sprint 0</h2>
+      <p>Created end March 2016</p>
       <ul>
         <li><a href="/lis/0/index">Start page</a></li>
         <li><a href="/lis/0/lis-home">My lis home page</a></li>
