--- a/app/views/lis/1/you/hours.html
+++ b/app/views/lis/1/you/hours.html
@@ -1,4 +1,4 @@
- {% extends 'templates/nhs_transaction_layout.html' %}
+{% extends 'templates/nhs_transaction_layout.html' %}
 {% import 'includes/form_macros.html' as form_macros %}
 
 {% block afterHeader %}
@@ -8,53 +8,25 @@
 {% block content %}
 
 <main id="content" role="main">
-        
+      
   <div class="grid-row">
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-      Your address
+      How many hours do you work each week?
   </h1>
 
   <form action="" method="get" class="form">
 
     {{
       form_macros.text_field({
-        id: 'address-line-one',
-        label: 'Building and street'
+        id: 'address'
       })
     }}
     
-    {{
-      form_macros.text_field({
-        id: 'address-line-two'
-      })
-    }}
-    
-    {{
-      form_macros.text_field({
-        id: 'first-name',
-        label: 'Town or city'
-      })
-    }}
-        
-    {{
-      form_macros.text_field({
-        id: 'county',
-        label: 'County (optional)'
-      })
-    }}
-        
-    {{
-      form_macros.text_field({
-        id: 'postcode',
-        label: 'Postcode'
-      })
-    }}
-        
     {{
       form_macros.button({
-        href: 'contact',
+        href: 'pay',
         label: 'Save and continue'
       })
     }}
