--- a/app/views/lis/1/you/pay-amount.html
+++ b/app/views/lis/1/you/pay-amount.html
@@ -8,53 +8,28 @@
 {% block content %}
 
 <main id="content" role="main">
-        
+      
   <div class="grid-row">
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-      Your address
+      Gross pay
   </h1>
 
   <form action="" method="get" class="form">
 
-    {{
-      form_macros.text_field({
-        id: 'address-line-one',
-        label: 'Building and street'
-      })
-    }}
-    
-    {{
-      form_macros.text_field({
-        id: 'address-line-two'
-      })
-    }}
+    <p>Explanation of gross pay and where to find it?</p>
     
     {{
       form_macros.text_field({
         id: 'first-name',
-        label: 'Town or city'
+        label: 'Gross pay per week'
       })
     }}
-        
-    {{
-      form_macros.text_field({
-        id: 'county',
-        label: 'County (optional)'
-      })
-    }}
-        
-    {{
-      form_macros.text_field({
-        id: 'postcode',
-        label: 'Postcode'
-      })
-    }}
-        
+
     {{
       form_macros.button({
-        href: 'contact',
+        href: 'value-two',
         label: 'Save and continue'
       })
     }}
@@ -62,8 +37,8 @@
     <p class="navigation"><a class="cancel" href="../lis-home">Cancel - back to my low income scheme home</a></p>
 
   </form>
-    </div>
-    </div>
+  </div>
+  </div>
 </main>
 
 {% endblock %}
