partner section added

--- a/app/views/lis/1/lis-home.html
+++ b/app/views/lis/1/lis-home.html
@@ -37,7 +37,7 @@
           </tr>
           <tr>
             <td>About your partner</td>
-            <td><a href="partner/work">Start</a></td>
+            <td><a href="partner/partner">Start</a></td>
           </tr>
           <tr>
             <td>Property, savings &amp; money</td>
