updating stylesheets to remove dlig

--- a/public/stylesheets/nhs_application.css
+++ b/public/stylesheets/nhs_application.css
@@ -1899,3 +1899,6 @@ label, .form-label, .form-label-bold {
 
 #address-line-one, #address-line-two {
   width: 100%; }
+
+li {
+  list-style: none inside disc; }
