updating money page

--- a/app/views/lis/1/assets/money.html
+++ b/app/views/lis/1/assets/money.html
@@ -13,7 +13,7 @@
     <div class="column-two-thirds">
 
       <h1 class="heading-large">
-        Do you have any savings or other money in this country or abroad?
+        Do you have any of the following in this country or abroad?
       </h1>
       <p>Tick all that apply</p>
   
