updating money page

--- a/app/views/lis/1/assets/money.html
+++ b/app/views/lis/1/assets/money.html
@@ -25,32 +25,32 @@
         </label>
       </div>
       <div class="form-group">
-        <input type="checkbox" id="ssp" name="bgroup1">
-        <label class="form-control-checkbox" for="ssp">
+        <input type="checkbox" id="pb" name="bgroup1">
+        <label class="form-control-checkbox" for="pb">
           Premium bonds
         </label>
       </div>
       <div class="form-group">
-        <input type="checkbox" id="ssp" name="bgroup1">
-        <label class="form-control-checkbox" for="ssp">
+        <input type="checkbox" id="cp" name="bgroup1">
+        <label class="form-control-checkbox" for="cp">
           Capital bonds
         </label>
       </div>
       <div class="form-group">
-        <input type="checkbox" id="sa" name="bgroup1">
-        <label class="form-control-checkbox" for="sa">
+        <input type="checkbox" id="sh" name="bgroup1">
+        <label class="form-control-checkbox" for="sh">
           Shares
         </label>
       </div>
       <div class="form-group">
-        <input type="checkbox" id="sa" name="bgroup1">
-        <label class="form-control-checkbox" for="sa">
+        <input type="checkbox" id="nsc" name="bgroup1">
+        <label class="form-control-checkbox" for="nsc">
           National Saving Certificates
         </label>
       </div>
       <div class="form-group">
-        <input type="checkbox" id="idb" name="bgroup1">
-        <label class="form-control-checkbox" for="idb">
+        <input type="checkbox" id="isa" name="bgroup1">
+        <label class="form-control-checkbox" for="isa">
           Individual Saving Accounts (ISAs) or any other investments
         </label>
       </div>
