--- a/app/views/lis/1/partner/partner.html
+++ b/app/views/lis/1/partner/partner.html
@@ -13,15 +13,14 @@
     <div class="column-two-thirds">
 
   <h1 class="heading-large">
-    Partner
+    Do you have a partner?
   </h1>
   
-  <p>(Description of partner)</p>
+  <p class="form-hint">We use the term partner to mean a person you live with as part of a couple of the same or oposite sex, whether or not you are married or in a civil partnership.</p>
 
   <form action="" method="get" class="form">
       <div class="form-item-wrapper">
         <fieldset>
-          <legend class="form-label-bold">Do you have a partner?</legend>
           <div class="inline-form-groups">
             <div class="form-group">
               <input type="radio" id="binary-yes" name="partner" value="yes">
