--- a/app/views/lis/1/start.html
+++ b/app/views/lis/1/start.html
@@ -9,37 +9,56 @@
     <div class="column-two-thirds">
 
       <div class="text">
-            <h1 class="heading-xlarge">Low Income Scheme</h1>
-        <p class="lede">
-          About this service.
+        
+        <h1 class="heading-xlarge">Low Income Scheme</h1>
+        
+        <p class="intro-to-list">
+          If you find it difficult to pay for health costs you may be entitled to some help towards the cost of:
         </p>
-
-        <p>
-          To use this service you’ll need to know:
-        </p>
-
-        <ul class="list-bullet">
-          <li>
-            One
-          </li>
-          <li>
-            Two
-          </li>
-          <li>
-            Three
-          </li>
+        
+        <ul class="list list-bullet">
+          <li>NHS Prescriptions;</li>
+          <li>NHS Dental treatment;</li>
+          <li>NHS wigs and fabric supports;</li>
+          <li>sight tests, glasses and contact lenses;</li>
+          <li>travel to receive NHS treatment if referred by a doctor (GP or hospital doctor) or dentist</li>
         </ul>
+        
+        <p>You can claim any time. Do not wait until you need treatment.</p>
 
-        <p>If you wish to claim a refund you will need to ...</p>
+        <h3 class="heading-medium">You cannot get help with health costs if you or your partner (or both) have more than:</h3>
+        
+        <ul class="list list-bullet">
+          <li>£16,000 in savings, investments &amp; properties (not counting the place where you live); or</li>
+          <li>£23,250 in savings, investments &amp; properties if you permanently live in a care home</li>
+        </ul>
+        
+
+        <h3 class="heading-medium">You are already entitled to full help with health costs if you are:</h3>
+            
+        <ul class="list list-bullet">
+          <li>getting income support</li>
+          <li>getting pension credit guarantee credit</li>
+          <li>getting universal credit</li> 
+          <li>named on, or entitled to, an NHS Tax Credit Exemption certificate</li>
+        </ul>
+        
+        <p class="intro-to-list">You can claim for:</p>
+              
+        <ul class="list list-bullet">
+          <li>yourself;</li>
+          <li>your partner; or</li>
+          <li>your children;</li>
+        </ul>
         
         <p>
           <a class="button button-get-started" href="registration/registration">Start</a>
         </p>
-        
+         
       </div>
       
     </div>
-    
+      
   </div>
   
 </main>
