added declaration page

--- a/app/views/lis/1/assets/money.html
+++ b/app/views/lis/1/assets/money.html
@@ -14,8 +14,9 @@
 
       <h1 class="heading-large">
         Do you have any of the following in this country or abroad?
+        <span class="form-hint">Tick all that apply</span>
       </h1>
-      <p>Tick all that apply</p>
+      
   
     <div class="form-item-wrapper">
       <div class="form-group">
