--- a/app/views/lis/1/lis-home.html
+++ b/app/views/lis/1/lis-home.html
@@ -50,7 +50,7 @@
         </table>
     
         <p>
-          <a class="button" href="full-help">Submit</a>
+          <a class="button" href="declaration">Submit</a>
         </p>
         
       </div>
