--- a/app/views/lis/1/you/about-you-summary.html
+++ b/app/views/lis/1/you/about-you-summary.html
@@ -18,32 +18,15 @@
       Check your details
     </h1>
 
-    <table class="data-table">
-      <!--
-      <tr>
-        <td>Dependant children</td>
-        <td>Yes</td>
-        <td><a href="#">Change this</a></td>
-      </tr>
-      <tr>
-        <td>First child</td>
-        <td>John Doe</td>
-        <td><a href="#">Change this</a></td>
-      </tr>
-      <tr>
-        <td>Date of birth</td>
-        <td>24 March 2016</td>
-        <td><a href="#">Change this</a></td>
-      </tr>
-      -->
-      <tr>
-        <td>Do you have a job</td>
-        <td>{{myWork}}</td>
-        <td><a href="#">Change this</a></td>
-      </tr>
+    <table class="data-table you-summary">
       <tr>
         <td>Are you in full time education?</td>
         <td>No</td>
+        <td><a href="#">Change this</a></td>
+      </tr>
+      <tr>
+        <td>Do you have a job</td>
+        <td>{{myWork}}</td>
         <td><a href="#">Change this</a></td>
       </tr>
       <tr>
@@ -52,18 +35,23 @@
         <td><a href="#">Change this</a></td>
       </tr>
       <tr>
-        <td>Which of the following pensions do you receive?</td>
-        <td>State pension<br>Private pension</td>
-        <td><a href="#">Change this</a></td>
-      </tr>
-      <tr>
-        <td>How much do you receive for your state pension?</td>
-        <td>£123</td>
-        <td><a href="#">Change this</a></td>
-      </tr>
-      <tr>
         <td>Do you receive pension credit?</td>
         <td>No</td>
+        <td><a href="#">Change this</a></td>
+      </tr>
+      <tr>
+        <td>
+          Which pensions do you receive?
+        </td>
+        <td>
+          State pension<br>
+          Private pension
+        </td>
+        <td><a href="#">Change this</a></td>
+      </tr>
+      <tr>
+        <td>How much do you receive for your state pension each week?</td>
+        <td>£123</td>
         <td><a href="#">Change this</a></td>
       </tr>
       <tr>
@@ -72,7 +60,7 @@
         <td><a href="#">Change this</a></td>
       </tr>
       <tr>
-        <td>How much do you receive?</td>
+        <td>How much do you receive for your private pension?</td>
         <td>£123</td>
         <td><a href="#">Change this</a></td>
       </tr>
