--- a/app/views/lis/1/you/benefits/benefit-group1.html
+++ b/app/views/lis/1/you/benefits/benefit-group1.html
@@ -18,23 +18,16 @@
   <p>Tick all that apply</p>
 
   <form action="" method="get" class="form">
-
     <div class="form-item-wrapper">
       <div class="form-group">
-        <input type="checkbox" id="ib" name="bgroup1">
-        <label class="form-control-checkbox" for="ib">
-          Income support
+        <input type="checkbox" id="cbsa" name="bgroup1">
+        <label class="form-control-checkbox" for="cbsa">
+          Contribution based employment and support allowance
         </label>
       </div>
       <div class="form-group">
-        <input type="checkbox" id="ssp" name="bgroup1">
-        <label class="form-control-checkbox" for="ssp">
-          Income based job seekers allowance
-        </label>
-      </div>
-      <div class="form-group">
-        <input type="checkbox" id="ssp" name="bgroup1">
-        <label class="form-control-checkbox" for="ssp">
+        <input type="checkbox" id="cbj" name="bgroup1">
+        <label class="form-control-checkbox" for="cbj">
           Contribution based jobseekers allowance
         </label>
       </div>
@@ -45,14 +38,20 @@
         </label>
       </div>
       <div class="form-group">
-        <input type="checkbox" id="sa" name="bgroup1">
-        <label class="form-control-checkbox" for="sa">
-          Contribution based employment and support allowance
+        <input type="checkbox" id="jsa" name="bgroup1">
+        <label class="form-control-checkbox" for="jsa">
+          Income based job seekers allowance
         </label>
       </div>
       <div class="form-group">
-        <input type="checkbox" id="idb" name="bgroup1">
-        <label class="form-control-checkbox" for="idb">
+        <input type="checkbox" id="is" name="bgroup1">
+        <label class="form-control-checkbox" for="is">
+          Income support
+        </label>
+      </div>
+      <div class="form-group">
+        <input type="checkbox" id="uc" name="bgroup1">
+        <label class="form-control-checkbox" for="uc">
           Universal credit
         </label>
       </div>
