--- a/app/views/lis/1/you/benefits/benefit-group2.html
+++ b/app/views/lis/1/you/benefits/benefit-group2.html
@@ -18,12 +18,11 @@
   <p>Tick all that apply</p>
 
   <form action="" method="get" class="form">
-
     <div class="form-item-wrapper">
       <div class="form-group">
-        <input type="checkbox" id="sda" name="bgroup2">
-        <label class="form-control-checkbox" for="sda">
-          Incapacity benefit
+        <input type="checkbox" id="af" name="bgroup2">
+        <label class="form-control-checkbox" for="af">
+          Armed forces independence payment 
         </label>
       </div>
       <div class="form-group">
@@ -33,32 +32,32 @@
         </label>
       </div>
       <div class="form-group">
+        <input type="checkbox" id="ib" name="bgroup2">
+        <label class="form-control-checkbox" for="ib">
+          Incapacity benefit
+        </label>
+      </div>
+      <div class="form-group">
+        <input type="checkbox" id="iid" name="bgroup2">
+        <label class="form-control-checkbox" for="iid">
+          Industrial injuries disablement benefit
+        </label>
+      </div>
+      <div class="form-group">
         <input type="checkbox" id="pip" name="bgroup2">
         <label class="form-control-checkbox" for="pip">
           Personal independence payment
         </label>
       </div>
       <div class="form-group">
-        <input type="checkbox" id="af" name="bgroup2">
-        <label class="form-control-checkbox" for="af">
+        <input type="checkbox" id="sda" name="bgroup2">
+        <label class="form-control-checkbox" for="sda">
           Severe disablement allowance
         </label>
       </div>
       <div class="form-group">
-        <input type="checkbox" id="af" name="bgroup2">
-        <label class="form-control-checkbox" for="af">
-          Industrial injuries disablement benefit
-        </label>
-      </div>
-      <div class="form-group">
-        <input type="checkbox" id="af" name="bgroup2">
-        <label class="form-control-checkbox" for="af">
-          Armed forces independence payment 
-        </label>
-      </div>
-      <div class="form-group">
-        <input type="checkbox" id="af" name="bgroup2">
-        <label class="form-control-checkbox" for="af">
+        <input type="checkbox" id="ssp" name="bgroup2">
+        <label class="form-control-checkbox" for="ssp">
           Statutory sick pay 
         </label>
       </div>
