--- a/app/views/lis/1/you/benefits/benefit-group3.html
+++ b/app/views/lis/1/you/benefits/benefit-group3.html
@@ -21,51 +21,51 @@
 
     <div class="form-item-wrapper">
       <div class="form-group">
-        <input type="checkbox" id="week" name="minor">
-        <label class="form-control-checkbox" for="week">
-          Widows benefits
-        </label>
-      </div>
-      <div class="form-group">
-        <input type="checkbox" id="fortnight" name="minor">
-        <label class="form-control-checkbox" for="fortnight">
-          Bereavement allowance
-        </label>
-      </div>
-      <div class="form-group">
-        <input type="checkbox" id="month" name="minor">
-        <label class="form-control-checkbox" for="month">
-          Widowed parents allowance
-        </label>
-      </div>
-      <div class="form-group">
-        <input type="checkbox" id="month" name="minor">
-        <label class="form-control-checkbox" for="month">
-          Carers allowance
-        </label>
-      </div> 
-      <div class="form-group">
-        <input type="checkbox" id="month" name="minor">
-        <label class="form-control-checkbox" for="month">
+        <input type="checkbox" id="aa" name="minor">
+        <label class="form-control-checkbox" for="aa">
           Attendance allowance
         </label>
       </div>
       <div class="form-group">
-        <input type="checkbox" id="month" name="minor">
-        <label class="form-control-checkbox" for="month">
-         Maintenance payments
+        <input type="checkbox" id="ba" name="minor">
+        <label class="form-control-checkbox" for="ba">
+          Bereavement allowance
         </label>
       </div>
       <div class="form-group">
-        <input type="checkbox" id="month" name="minor">
-        <label class="form-control-checkbox" for="month">
+        <input type="checkbox" id="ca" name="minor">
+        <label class="form-control-checkbox" for="ca">
+          Carers allowance
+        </label>
+      </div> 
+      <div class="form-group">
+        <input type="checkbox" id="ctc" name="minor">
+        <label class="form-control-checkbox" for="ctc">
          Child tax credits
         </label>
       </div>
       <div class="form-group">
-        <input type="checkbox" id="month" name="minor">
-        <label class="form-control-checkbox" for="month">
+        <input type="checkbox" id="mp" name="minor">
+        <label class="form-control-checkbox" for="mp">
+         Maintenance payments
+        </label>
+      </div>
+      <div class="form-group">
+        <input type="checkbox" id="ma" name="minor">
+        <label class="form-control-checkbox" for="ma">
          Maternity allowance
+        </label>
+      </div>
+      <div class="form-group">
+        <input type="checkbox" id="wpa" name="minor">
+        <label class="form-control-checkbox" for="wpa">
+          Widowed parents allowance
+        </label>
+      </div>
+      <div class="form-group">
+        <input type="checkbox" id="wb" name="minor">
+        <label class="form-control-checkbox" for="wb">
+          Widows benefits
         </label>
       </div>
       <p class="form-block">or</p>
