--- a/app/views/lis/1/lis-home.html
+++ b/app/views/lis/1/lis-home.html
@@ -25,12 +25,6 @@
         </p>
     
         <table class="data-table">
-          <!--
-          <tr>
-            <td>Register</td>
-            <td><a href="registration">Edit</a></td>
-          </tr>
-          -->
           <tr>
             <td>About you</td>
             <td><a href="you/education">Start</a></td>
@@ -45,7 +39,7 @@
           </tr>
           <tr>
             <td>About where you live</td>
-            <td><a href="live/care-home">Start</a></td>
+            <td><a href="live/home">Start</a></td>
           </tr>
         </table>
     
