--- a/app/views/lis/1/live/address.html
+++ b/app/views/lis/1/live/address.html
@@ -54,7 +54,7 @@
         
     {{
       form_macros.button({
-        href: 'contact',
+        href: 'rent',
         label: 'Save and continue'
       })
     }}
