--- a/app/views/lis/1/live/home.html
+++ b/app/views/lis/1/live/home.html
@@ -47,7 +47,7 @@
         
     {{
       form_macros.button({
-        href: 'rent',
+        href: 'address',
         label: 'Save and continue'
       })
     }}
