--- a/app/views/lis/1/you/benefits/benefit4.html
+++ b/app/views/lis/1/you/benefits/benefit4.html
@@ -13,7 +13,7 @@
     <div class="column-two-thirds">
 
       <h1 class="heading-large">
-        Are you looking after someone but can’t get careers allowance because of another benefit?
+        Are you looking after someone but can’t get carers allowance because of another benefit?
       </h1>
   
       <form action="" method="get" class="form">
