changed where the name and address questions are asked

--- a/app/views/lis/1/ko.html
+++ b/app/views/lis/1/ko.html
@@ -51,7 +51,7 @@
       </div>
     {{
       form_macros.button({
-        href: 'registration/registration',
+        href: 'you/registration',
         label: 'Next'
       })  
     }}
