--- a/app/views/lis/1/lis-home.html
+++ b/app/views/lis/1/lis-home.html
@@ -27,7 +27,7 @@
         <table class="data-table">
           <tr>
             <td>About you</td>
-            <td><a href="you/education">Start</a></td>
+            <td><a href="you/registration">Start</a></td>
           </tr>
           <tr>
             <td>About your partner</td>
