--- a/app/views/lis/1/you/contact.html
+++ b/app/views/lis/1/you/contact.html
@@ -8,43 +8,33 @@
 {% block content %}
 
 <main id="content" role="main">
-    
+  
   <div class="grid-row">
     <div class="column-two-thirds">
 
-  <!-- <p class="navigation"><a class="back-to-previous">Back</a></p> -->
-
   <h1 class="heading-large">
-    Register
+    Contact details
   </h1>
 
   <form action="" method="get" class="form">
 
     {{
       form_macros.text_field({
-        id: 'first-name',
-        label: 'First name'
+        id: 'email',
+        label: 'Email address'
       })
     }}
 
     {{
       form_macros.text_field({
-        id: 'last-name',
-        label: 'Last name'
-      })
-    }}
-
-    {{
-      form_macros.date_field({
-        label: 'Date of birth',
-        hint_date: '31 7 1961',
-        id_prefix: 'dob-'
+        id: 'telephone',
+        label: 'Telephone number (optional)'
       })
     }}
 
     {{
       form_macros.button({
-        href: 'contact',
+        href: 'work',
         label: 'Next'
       })
     }}
