--- a/app/views/lis/1/you/benefits/benefit-group1.html
+++ b/app/views/lis/1/you/benefits/benefit-group1.html
@@ -31,7 +31,7 @@
           Contribution based jobseekers allowance
         </label>
       </div>
-      <div class="form-group">
+      <!-- div class="form-group">
         <input type="checkbox" id="sa" name="bgroup1">
         <label class="form-control-checkbox" for="sa">
           Employment and support allowance
@@ -54,7 +54,7 @@
         <label class="form-control-checkbox" for="uc">
           Universal credit
         </label>
-      </div>
+      </div-->
       <p class="form-block">or</p>
       <div class="form-group">
         <input type="checkbox" id="none" name="bgroup1">
