--- a/app/views/lis/1/ko.html
+++ b/app/views/lis/1/ko.html
@@ -16,42 +16,41 @@
       Do you receive any of the following?
   </h1>
 
-  <form action="" method="get" class="form">
+  <form action="kickout-handler" method="get" class="form">
     <div class="form-item-wrapper">
       <div class="form-group">
-        <input type="radio" id="cbsa" name="bgroup1">
+        <input type="radio" id="cbsa" name="kickout">
         <label class="form-control-radio" for="cbsa">
           Income support
         </label>
       </div>
       <div class="form-group">
-        <input type="radio" id="cbj" name="bgroup1">
+        <input type="radio" id="cbj" name="kickout">
         <label class="form-control-radio" for="cbj">
           Universal credit
         </label>
       </div>
       <div class="form-group">
-        <input type="radio" id="sa" name="bgroup1">
+        <input type="radio" id="sa" name="kickout">
         <label class="form-control-radio" for="sa">
           Income based job seekers allowance
         </label>
       </div>
       <div class="form-group">
-        <input type="radio" id="jsa" name="bgroup1">
+        <input type="radio" id="jsa" name="kickout">
         <label class="form-control-radio" for="jsa">
           Income related employment &amp; support allowance
         </label>
       </div>
       <p class="form-block">or</p>
       <div class="form-group">
-        <input type="radio" id="none" name="bgroup1">
-        <label class="form-control-radio" for="none">
+        <input type="radio" id="continue" name="kickout" value="continue">
+        <label class="form-control-radio" for="continue">
           I don't receive any of these
         </label>
       </div>
     {{
       form_macros.button({
-        href: 'you/registration',
         label: 'Next'
       })  
     }}
