--- a/app/views/lis/1/live/rent.html
+++ b/app/views/lis/1/live/rent.html
@@ -38,7 +38,7 @@
 
         <div class="js-hidden panel-indent" id="contact-email-address">
           <label class="form-label-bold" for="email-address">
-            How much rent do you pay each month?
+            How much rent do you pay?
           </label>
           <input type="text" id="email-address" class="form-control">
         </div>
